--- a/ses1/demo_in_class.ipynb
+++ b/ses1/demo_in_class.ipynb
@@ -16,10 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hello world')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,10 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 'Hello world'\n",
+    "\n",
+    "type(a)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,10 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,10 +137,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello world12'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a\n",
+    "b = 12\n",
+    "\n",
+    "a+str(b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,15 +176,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NO NO NO'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def message(x):\n",
+    "\n",
     "    if x == 'Claus':\n",
-    "        print('Hello ' + x)\n",
+    "        return f'Hej {x}'\n",
     "    else:\n",
-    "        does_not_exist()"
+    "        return 'NO NO NO'\n",
+    "    \n",
+    "message('Anne')"
    ]
   },
   {
@@ -146,7 +215,7 @@
     }
    ],
    "source": [
-    "message('Claus')"
+    "´"
    ]
   },
   {
@@ -193,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,10 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'el'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1:4:2]"
+   ]
   },
   {
    "cell_type": "markdown",
