--- a/ses1/exercises/string1.ipynb
+++ b/ses1/exercises/string1.ipynb
@@ -36,12 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def donuts(count):\n",
-    "    return '' "
+    "    if count >= 10:\n",
+    "        return f'Number of donuts: many'\n",
+    "    return f'Number of donuts: {count}' "
    ]
   },
   {
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
     "  print ('donuts')\n",
     "  # Each line calls donuts, compares its result to the expected for that call.\n",
-    "  test(donuts(4), 'Number of donuts: 4')\n",
+    "  test(donuts(-4), 'Number of donuts: -4')\n",
     "  test(donuts(9), 'Number of donuts: 9')\n",
     "  test(donuts(10), 'Number of donuts: many')\n",
     "  test(donuts(99), 'Number of donuts: many')\n",
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -194,10 +196,10 @@
      "output_type": "stream",
      "text": [
       "donuts\n",
-      "  X  got:  expected: Number of donuts: 4\n",
-      "  X  got:  expected: Number of donuts: 9\n",
-      "  X  got:  expected: Number of donuts: many\n",
-      "  X  got:  expected: Number of donuts: many\n",
+      " OK  got: Number of donuts: -4 expected: Number of donuts: -4\n",
+      " OK  got: Number of donuts: 9 expected: Number of donuts: 9\n",
+      " OK  got: Number of donuts: many expected: Number of donuts: many\n",
+      " OK  got: Number of donuts: many expected: Number of donuts: many\n",
       "\n",
       "both_ends\n",
       "  X  got:  expected: spng\n",
