--- a/ses4/notebook_listcomp_modules.ipynb
+++ b/ses4/notebook_listcomp_modules.ipynb
@@ -13,6 +13,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -45,6 +52,13 @@
    ],
    "source": [
     "[x for x in [1, 2, 3, 4]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For loop or list comprehension"
    ]
   },
   {
@@ -135,6 +149,13 @@
     "2. Create a list of capital letter from the english aplhabet, but exclude 4 with the Unicode code point of either 70, 75, 80, 85.\n",
     "3. Create a list of capital letter from from the english aplhabet, but exclude every second between F & O"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -353,6 +374,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soled_out = [('Black', 'm'), ('White', 's')]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -373,68 +403,6 @@
    },
    "source": [
     "## The import statement"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "\n",
-    "def greeting(x):\n",
-    "    print(x)\n",
-    "\n",
-    "    if len(x) == 2 and x[1] == '-it':\n",
-    "        print('interactive terminal started')\n",
-    "    if len(x) == 3 and x[2] == '--rm':\n",
-    "        print('Will be removed at exit')\n",
-    "\n",
-    "greeting(sys.argv)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## STUDENTS 10 MINUTES TASK\n",
-    "**Ex 4: Sys module exercise**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "Create a commandline tool that checks if the required aguments are present when you run the program, and if not tells you what is missing to run the program.    \n",
-    "\n",
-    "So if you run `python script.py` the program should print out an error saying `Usage: python script.py [-it]{--rm}` where the **[]** means required and the **{}** means optional.\n",
-    "    "
    ]
   },
   {
@@ -554,12 +522,38 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/clbo/Tresors/KEA/python/repos/_fall2023-code-examples-from-teachings/ses4\n",
+      "README.md\n",
+      "notebook_listcomp_modules.ipynb\n",
+      "test.py\n",
+      "README.md\n",
+      "notebook_listcomp_modules.ipynb\n",
+      "/Users/clbo/Tresors/KEA/python/repos/_fall2023-code-examples-from-teachings/ses4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['pwd'], returncode=0)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import subprocess    \n",
     "subprocess.run(['pwd'])    \n",
@@ -583,15 +577,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md\n",
+      "notebook_listcomp_modules.ipynb\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['ls'], returncode=0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import subprocess    \n",
-    "subprocess.run(['git', 'clone', 'https://github.com/python-elective-kea/fall2020.git'])        \n",
+    "# subprocess.run(['git', 'clone', 'https://github.com/python-elective-kea/fall2023.git'])        \n",
     "\n",
     "subprocess.run(['ls'])    "
    ]
@@ -610,80 +625,55 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [],
    "source": [
+    "# %pip install requests\n",
     "import requests"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
+   "outputs": [],
    "source": [
-    "ModuleNotFoundError: No module named 'requests'"
+    "# %pip list"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "pip list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "pip install requests"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "pip list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"current_user_url\":\"https://api.github.com/user\",\"current_user_authorizations_html_url\":\"https://github.com/settings/connections/applications{/client_id}\",\"authorizations_url\":\"https://api.github.com/authorizations\",\"code_search_url\":\"https://api.github.com/search/code?q={query}{&page,per_page,sort,order}\",\"commit_search_url\":\"https://api.github.com/search/commits?q={query}{&page,per_page,sort,order}\",\"emails_url\":\"https://api.github.com/user/emails\",\"emojis_url\":\"https://api.github.com/emojis\",\"events_url\":\"https://api.github.com/events\",\"feeds_url\":\"https://api.github.com/feeds\",\"followers_url\":\"https://api.github.com/user/followers\",\"following_url\":\"https://api.github.com/user/following{/target}\",\"gists_url\":\"https://api.github.com/gists{/gist_id}\",\"hub_url\":\"https://api.github.com/hub\",\"issue_search_url\":\"https://api.github.com/search/issues?q={query}{&page,per_page,sort,order}\",\"issues_url\":\"https://api.github.com/issues\",\"keys_url\":\"https://api.github.com/user/keys\",\"label_search_url\":\"https://api.github.com/search/labels?q={query}&repository_id={repository_id}{&page,per_page}\",\"notifications_url\":\"https://api.github.com/notifications\",\"organization_url\":\"https://api.github.com/orgs/{org}\",\"organization_repositories_url\":\"https://api.github.com/orgs/{org}/repos{?type,page,per_page,sort}\",\"organization_teams_url\":\"https://api.github.com/orgs/{org}/teams\",\"public_gists_url\":\"https://api.github.com/gists/public\",\"rate_limit_url\":\"https://api.github.com/rate_limit\",\"repository_url\":\"https://api.github.com/repos/{owner}/{repo}\",\"repository_search_url\":\"https://api.github.com/search/repositories?q={query}{&page,per_page,sort,order}\",\"current_user_repositories_url\":\"https://api.github.com/user/repos{?type,page,per_page,sort}\",\"starred_url\":\"https://api.github.com/user/starred{/owner}{/repo}\",\"starred_gists_url\":\"https://api.github.com/gists/starred\",\"topic_search_url\":\"https://api.github.com/search/topics?q={query}{&page,per_page}\",\"user_url\":\"https://api.github.com/users/{user}\",\"user_organizations_url\":\"https://api.github.com/user/orgs\",\"user_repositories_url\":\"https://api.github.com/users/{user}/repos{?type,page,per_page,sort}\",\"user_search_url\":\"https://api.github.com/search/users?q={query}{&page,per_page,sort,order}\"}'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests    \n",
-    "res = requests.get('https://api.github.com')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
+    "res = requests.get('https://api.github.com')\n",
     "res.text"
    ]
   },
@@ -699,12 +689,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2715"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import requests\n",
     "\n",
@@ -713,13 +716,6 @@
     "o = open('logo.png', 'wb')    \n",
     "o.write(f.content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -739,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
