--- a/ses4/notebook_listcomp_modules.ipynb
+++ b/ses4/notebook_listcomp_modules.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -42,16 +42,16 @@
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4]"
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[x for x in [1, 2, 3, 4]]"
+    "[ i  for i in range(10)      ]"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -84,17 +84,17 @@
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "l = []\n",
-    "for i in range(1, 10):\n",
+    "for i in range(10):\n",
     "    l.append(i)\n",
     "l"
    ]
@@ -131,7 +131,7 @@
     }
    ],
    "source": [
-    "[i for i in range(1, 10)]"
+    "[ i  for i in range(1, 10)  ]"
    ]
   },
   {
