--- a/ses4/notebook_listcomp_modules.ipynb
+++ b/ses4/notebook_listcomp_modules.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -164,13 +164,9 @@
        " 'D',\n",
        " 'E',\n",
        " 'F',\n",
-       " 'G',\n",
        " 'H',\n",
-       " 'I',\n",
        " 'J',\n",
-       " 'K',\n",
        " 'L',\n",
-       " 'M',\n",
        " 'N',\n",
        " 'O',\n",
        " 'P',\n",
@@ -186,7 +182,7 @@
        " 'Z']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,9 +190,29 @@
    "source": [
     "import string\n",
     "\n",
-    "[i for i in string.ascii_uppercase ] \n",
+    "# [i for i in string.ascii_uppercase if ord(i) not in (70, 75, 80, 85)] \n",
     "\n",
-    "[ chr(i)  for  i in range(ord('A'), ord('Z')+1)  ]"
+    "[ chr(i)  for  i in range(ord('A'), ord('Z')+1) if i not in range(71, 79, 2)  ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.ascii_uppercase"
    ]
   },
   {
