--- a/ses4/notebook_listcomp_modules.ipynb
+++ b/ses4/notebook_listcomp_modules.ipynb
@@ -12,6 +12,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello from notebook\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello from notebook')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
