--- a/ses6/decorators.ipynb
+++ b/ses6/decorators.ipynb
@@ -196,6 +196,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mydecorator(func):\n",
+    "\n",
+    "    def wrapper(*args):\n",
+    "\n",
+    "        x = 'Hello from wrapper - '\n",
+    "        x += func(*args)\n",
+    "        x += ' - End of wrapper'\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def message(x, z):\n",
+    "    return f'Hello {x} {z}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "message = mydecorator(message) # 'Hello'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello from wrapper - Hello Claus Goddag - End of wrapper'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message('Claus', 'Goddag')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
