--- a/ses7/oop.ipynb
+++ b/ses7/oop.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,24 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def error_handler(func):\n",
-    "    def wrapper(*args):\n",
-    "        if 0 in args[1:]:\n",
-    "            return 'you can not divide by zero xx'\n",
-    "        if all(isinstance(i, int) for i in args): \n",
-    "            return func(*args)\n",
-    "        else:\n",
-    "            return 'Somethiing went wrong'\n",
-    "    return wrapper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +39,6 @@
     "def mul(*args):\n",
     "    return reduce(lambda x,y:x * y, args)\n",
     "\n",
-    "@error_handler\n",
     "def div(*args):\n",
     "     return reduce(lambda x,y:x / y, args)\n",
     "    "
@@ -64,22 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "5.0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "div(0, 2, 4, 10)"
+    "div(10, 2)"
    ]
   },
   {
@@ -102,8 +84,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
