--- a/ses7/oop.ipynb
+++ b/ses7/oop.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def error_handler(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        if 0 in args:\n",
+    "            return 'No division by zero xx'\n",
+    "        if all(isinstance(i, int) for i in args):     \n",
+    "            return func(*args)\n",
+    "        else:\n",
+    "            return 'Something went wrong xx'\n",
+    "    \n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@error_handler\n",
     "def add(*args):\n",
     "    return sum(args)\n",
     "\n",
@@ -39,41 +58,33 @@
     "def mul(*args):\n",
     "    return reduce(lambda x,y:x * y, args)\n",
     "\n",
+    "@error_handler\n",
     "def div(*args):\n",
-    "     return reduce(lambda x,y:x / y, args)\n",
+    "    return reduce(lambda x,y:x / y, args)\n",
+    "\n",
+    "# div = error_handler(div)\n",
+    "     \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.0"
+       "'Something went wrong xx'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "div(10, 2)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "if 0 in args[1:]:\n",
-    "    return 'you can not divide by zero'\n",
-    "if all(isinstance(i, int) for i in args): \n",
-    "    return func(*args)\n",
-    "else:\n",
-    "    return 'Somethiing went wrong'"
+    "add(10,'hell')"
    ]
   },
   {
@@ -85,10 +96,236 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, brand, hk=None):\n",
+    "        self.brand = brand\n",
+    "        self.hk = hk\n",
+    "            \n",
+    "\n",
+    "    def message(self):\n",
+    "        return f'Hello {self.brand}'\n",
+    "    \n",
+    "    def ny_metode(self, x):\n",
+    "        self.x = x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car = Car('Bmw')\n",
+    "car2 = Car('Volvo', 123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car.hk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "567"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car2.test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bank exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* All classes should be in a single file.\n",
+    "\n",
+    "* The bank class should be able to hold many accounts.\n",
+    "\n",
+    "* You should be able to add new accounts.\n",
+    "\n",
+    "* The Account class should have relevant details.\n",
+    "\n",
+    "* The Customer class Should also have relevant details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def error_handler(func):\n",
+    "    def wrapper(*args):    \n",
+    "        return func(*args)\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Bank:\n",
+    "     @error_handler\n",
+    "     def __init__(self):\n",
+    "          self.accounts = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Account:\n",
+    "    def __init__(self, no, cust):\n",
+    "        self.no = no\n",
+    "        self.cust = cust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Customer:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Bank at 0x10a18e210>"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nordea = Bank()\n",
+    "nordea\n",
+    "#nordea.accounts.append(Account(123, Customer('Claus')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Account at 0x10a104e50>"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#nordea.accounts[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a Python class named Rectangle.\n",
+    "The class should have two instance variables: length and width.\n",
+    "The class should have a method named area that returns the area of the rectangle.\n",
+    "The class should have a method named perimeter that returns the perimeter of the rectangle.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, length, width):\n",
+    "        self.length = length\n",
+    "        self.width = width\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.length * self.width\n",
+    "    def perimeter(self):\n",
+    "        return (self.length + self.width)*2"
+   ]
   }
  ],
  "metadata": {
