--- a/ses8/properties.ipynb
+++ b/ses8/properties.ipynb
@@ -42,8 +42,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ## Q: What if value should be between 0 and 100?"
+    "***"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### Q: What if value should be between 0 and 100?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
