--- a/ses8/properties.ipynb
+++ b/ses8/properties.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Propeties\n",
+    "## Properties\n",
     "_Encapsulating data_"
    ]
   },
