--- a/ses8/properties.ipynb
+++ b/ses8/properties.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Library code - JAVA Code\n",
+    "class Number:\n",
+    "\n",
+    "    def __init__(self, value):\n",
+    "           self.setX(value) \n",
+    "\n",
+    "    def getX(self):\n",
+    "         return self.x\n",
+    "    \n",
+    "    def setX(self, value):\n",
+    "        if value >= 0 and value <= 100:\n",
+    "            self.x = value\n",
+    "        else:\n",
+    "            raise ValueError('Number should be between 0 and 100')\n",
+    "        \n",
+    "    x = property(getX, setX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python \n",
+    "\n",
+    "class Number:\n",
+    "    def __init__(self, value):\n",
+    "        self.x = value\n",
+    "\n",
+    "    @property  # getter\n",
+    "    def x(self):\n",
+    "        return self._x\n",
+    "    \n",
+    "    @x.setter # setter\n",
+    "    def x(self, value):\n",
+    "        if 0 <= value <= 100:\n",
+    "            self._x = value  # _x bliver oprettet\n",
+    "        else:\n",
+    "            raise ValueError('Number should be between 0 and 100')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -28,13 +77,15 @@
        "12"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num = Number(12)\n",
+    "# user code\n",
+    "num = Number(-78)\n",
+    "num.x = 12\n",
     "num.x"
    ]
   },
