--- a/ses8/properties.ipynb
+++ b/ses8/properties.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,86 @@
    "metadata": {},
    "source": [
     "> ### Q: What if value should be between 0 and 100?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# car.py (solution)\n",
+    "\n",
+    "# 1. Car object\n",
+    "# Create a Car class. \n",
+    "# When instanciated the object should be able to take 4 attributes (Make, Model, bhp, mph).\n",
+    "# They all 4 should be properties.\n",
+    "\n",
+    "db = {\n",
+    "    \"Audi\": {\"A3\", \"A4\", \"A6\", \"Q5\", \"Q7\"},\n",
+    "    \"BMW\": {\"3 Series\", \"5 Series\", \"7 Series\", \"X3\", \"X5\"},\n",
+    "    \"Mercedes-Benz\": {\"C-Class\", \"E-Class\", \"S-Class\", \"GLC\", \"GLE\"},\n",
+    "    \"Volkswagen\": {\"Golf\", \"Passat\", \"Polo\", \"Tiguan\", \"Arteon\"},\n",
+    "    \"Volvo\": {\"S60\", \"S90\", \"V60\", \"XC60\", \"XC90\"},\n",
+    "    \"Toyota\": {\"Corolla\", \"Camry\", \"RAV4\", \"Prius\", \"Hilux\"},\n",
+    "    \"Honda\": {\"Civic\", \"Accord\", \"CR-V\", \"Fit\", \"HR-V\"},\n",
+    "    \"Ford\": {\"Focus\", \"Fiesta\", \"Mustang\", \"Escape\", \"Explorer\"},\n",
+    "    \"Nissan\": {\"Altima\", \"Rogue\", \"Sentra\", \"Maxima\", \"Murano\"},\n",
+    "    \"Mazda\": {\"Mazda3\", \"Mazda6\", \"CX-5\", \"CX-9\", \"MX-5\"}\n",
+    "}\n",
+    "\n",
+    "\n",
+    "class Car:\n",
+    "    def __init__(self, make, model, bhp, mph):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.bhp = bhp\n",
+    "        self.mph = mph\n",
+    "\n",
+    "    # make\n",
+    "    @property \n",
+    "    def make(self):\n",
+    "        return self._make\n",
+    "    \n",
+    "    @make.setter\n",
+    "    def make(self, make):\n",
+    "        if make not in db.keys():\n",
+    "            raise ValueError('Make is not in valid list')\n",
+    "        self._make = make\n",
+    "\n",
+    "    # model\n",
+    "    @property \n",
+    "    def model(self):\n",
+    "        return self._model\n",
+    "    \n",
+    "    @model.setter\n",
+    "    def model(self, model):\n",
+    "        if model not in db[self.make]: \n",
+    "            raise ValueError(f'No model named {model} belongs to {self.make}')\n",
+    "        self._model = model\n",
+    "    \n",
+    "    # bhp\n",
+    "    @property \n",
+    "    def bhp(self):\n",
+    "        return self._bhp\n",
+    "    \n",
+    "    @bhp.setter\n",
+    "    def bhp(self, bhp):\n",
+    "        if bhp < 0:\n",
+    "            raise ValueError('bhp can not be negative')\n",
+    "        self._bhp = bhp\n",
+    "\n",
+    "    # mph\n",
+    "    @property \n",
+    "    def mph(self):\n",
+    "        return self._mph\n",
+    "    \n",
+    "    @mph.setter\n",
+    "    def mph(self, mph):\n",
+    "        if mph < 0:\n",
+    "            raise ValueError('mph can not be negative')\n",
+    "        self._mph = mph\n",
+    "\n"
    ]
   }
  ],
