--- a/ses9/datamodel.ipynb
+++ b/ses9/datamodel.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## \\__repr__()"
+    "### \\__repr__()"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## \\__str__()"
+    "### \\__str__()"
    ]
   },
   {
@@ -99,7 +99,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Number:\n",
+    "    def __init__(self, value):\n",
+    "        self.num"
+   ]
   },
   {
    "cell_type": "markdown",
