--- a/ses9/datamodel.ipynb
+++ b/ses9/datamodel.ipynb
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Number:\n",
     "    def __init__(self, value):\n",
-    "        self.num"
+    "        self.num = value"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
