ex changed to focus on task

--- a/ses9/datamodel.ipynb
+++ b/ses9/datamodel.ipynb
@@ -142,31 +142,19 @@
    "metadata": {},
    "source": [
     "### Ex1: Deck of cards\n",
-    "Continue with the deck example and implement the\n",
-    "```\n",
-    "    __len__ method\n",
+    "Continue with the deck example and implement that\n",
     "\n",
-    "    __add__ method\n",
-    "\n",
-    "    __repr__ method\n",
-    "\n",
-    "    __str__ method\n",
-    "\n",
-    "    __setitem__ method\n",
-    "\n",
-    "    __delitem__ method\n",
-    "\n",
-    "```\n",
+    "* The deck should know how many cards it has by using the **len()** build in function.\n",
+    "* You should be able to add 2 decks with the **+** oprator.\n",
+    "* When the deck object is printed to the console a detailed representation of the objects state should be shown. (here you could also use the **repr()**)\n",
+    "* When the deck object is printed throught the **print()** function a user friendly message about the object state should be displayed (here you could also use the str()).\n",
+    "* You should be able to change a card with this syntax ```d[1] = 'Q'```    \n",
+    "* You should be able to remove a card with this syntax ```del(d[1])```\n",
     "\n",
     "We look at this together in a short while.\n",
     "\n",
     "When you a done, take a look at the exercise below and ask your questions."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
