--- a/ses9/datamodel.ipynb
+++ b/ses9/datamodel.ipynb
@@ -43,7 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Number:\n",
+    "\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f'{self.__dict__}'\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'Number(Value = {self.value})'\n",
+    "\n",
+    "num = Number(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -57,10 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'value': 12}\""
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repr(num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,10 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number(Value = 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,13 +139,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Number:\n",
     "    def __init__(self, value):\n",
-    "        self.num = value"
+    "        self.value = value\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        return Number(self.value + other.value)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f'{self.__dict__}'\n",
+    "    \n",
+    "    def __mul__(self, other):\n",
+    "        return Number(self.value * other.value)\n",
+    "\n",
+    "num = Number(12)\n",
+    "num2 = Number(24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'value': 288}"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num + num2\n",
+    "num * num2"
    ]
   },
   {
@@ -110,6 +193,27 @@
    "metadata": {},
    "source": [
     "### Indexed objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4]\n",
+    "l[2:4]"
    ]
   },
   {
@@ -121,13 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Deck:\n",
     "    def __init__(self):\n",
-    "        self.cards = ['A', 'K', 4, 7]"
+    "        self.cards = ['A', 'K', 4, 7]\n",
+    "\n",
+    "    def __getitem__(self, key):\n",
+    "        return self.cards[key]\n",
+    "\n",
+    "deck = Deck()"
    ]
   },
   {
